Specifies bytes for salt length and fixes examples

--- a/artifacts/acvp_sub_rsa.html
+++ b/artifacts/acvp_sub_rsa.html
@@ -1123,9 +1123,9 @@
     </tr>
     <tr>
       <td class="left">hashAlg</td>
-      <td class="left">supported hash algorithms for signature generation for this sigType and modulo - see <a href="#SP800-131A">[SP800-131A]</a>, Section 9</td>
-      <td class="left">array</td>
-      <td class="left">any non-empty subset of {"SHA-224", "SHA-256", "SHA-384", "SHA-512", "SHA-512/224", "SHA-512/256"}</td>
+      <td class="left">supported hash algorithm for signature generation for this sigType and modulo - see <a href="#SP800-131A">[SP800-131A]</a>, Section 9</td>
+      <td class="left">value</td>
+      <td class="left">any value from {"SHA-224", "SHA-256", "SHA-384", "SHA-512", "SHA-512/224", "SHA-512/256"}</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1137,9 +1137,9 @@
     </tr>
     <tr>
       <td class="left">saltLen</td>
-      <td class="left">supported salt lengths for PSS signature generation - see <a href="#FIPS186-4">[FIPS186-4]</a>, Section 5.5. See also note below.</td>
-      <td class="left">array</td>
-      <td class="left">array of values for each hash algorithm used subject to the constraint in the note below.</td>
+      <td class="left">supported salt lengths in bytes for PSS signature generation - see <a href="#FIPS186-4">[FIPS186-4]</a>, Section 5.5. See also note below.</td>
+      <td class="left">value</td>
+      <td class="left">any integer value subject to the constraint in the note below.</td>
       <td class="left">Yes</td>
     </tr>
   </tbody>
@@ -1223,9 +1223,9 @@
     </tr>
     <tr>
       <td class="left">hashAlg</td>
-      <td class="left">supported hash algorithms for signature generation for this sigType and modulo - see <a href="#SP800-131A">[SP800-131A]</a>, Section 9</td>
-      <td class="left">array</td>
-      <td class="left">any non-empty subset of {"SHA-1", "SHA-224", "SHA-256", "SHA-384", "SHA-512", "SHA-512/224", "SHA-512/256"}</td>
+      <td class="left">supported hash algorithm for signature verification for this sigType and modulo - see <a href="#SP800-131A">[SP800-131A]</a>, Section 9</td>
+      <td class="left">value</td>
+      <td class="left">any value from {"SHA-1", "SHA-224", "SHA-256", "SHA-384", "SHA-512", "SHA-512/224", "SHA-512/256"}</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1237,9 +1237,9 @@
     </tr>
     <tr>
       <td class="left">saltLen</td>
-      <td class="left">supported salt lengths for PSS signature verification - see <a href="#FIPS186-4">[FIPS186-4]</a>, Section 5.5. See also note below.</td>
-      <td class="left">array</td>
-      <td class="left">array of values for each hash algorithm used subject to the constraint in the note below.</td>
+      <td class="left">supported salt lengths in bytes for PSS signature verification - see <a href="#FIPS186-4">[FIPS186-4]</a>, Section 5.5. See also note below.</td>
+      <td class="left">value</td>
+      <td class="left">any integer value subject to the constraint in the note below.</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
@@ -1561,7 +1561,7 @@
     </tr>
     <tr>
       <td class="left">saltLen</td>
-      <td class="left">The salt length for the group</td>
+      <td class="left">The salt length for the group in bytes</td>
       <td class="left">value</td>
       <td class="left">Yes</td>
     </tr>
@@ -2174,15 +2174,15 @@
                       "hashPair" : [
                         {
                           "hashAlg" : "SHA-224",
-                          "saltLen" : 1
+                          "saltLen" : 28
                         },
                         {
                           "hashAlg" : "SHA-256",
-                          "saltLen" : 2
+                          "saltLen" : 32
                         },
                         {
                           "hashAlg" : "SHA-512",
-                          "saltLen" : 3
+                          "saltLen" : 64
                         }
                       ]
                     }
@@ -2190,15 +2190,15 @@
                       "hashPair" : [
                         {
                           "hashAlg" : "SHA-224",
-                          "saltLen" : 4
+                          "saltLen" : 28
                         },
                         {
                           "hashAlg" : "SHA-256",
-                          "saltLen" : 5
+                          "saltLen" : 32
                         },
                         {
                           "hashAlg" : "SHA-512",
-                          "saltLen" : 6
+                          "saltLen" : 64
                         }
                       ]
                     }
@@ -2206,15 +2206,15 @@
                       "hashPair" : [
                         {
                           "hashAlg" : "SHA-224",
-                          "saltLen" : 7
+                          "saltLen" : 28
                         },
                         {
                           "hashAlg" : "SHA-256",
-                          "saltLen" : 8
+                          "saltLen" : 32
                         },
                         {
                           "hashAlg" : "SHA-512",
-                          "saltLen" : 9
+                          "saltLen" : 64
                         }
                       ]
                     }
@@ -2328,15 +2328,15 @@
                       "hashPair" : [
                         {
                           "hashAlg" : "SHA-224",
-                          "saltLen" : 1
+                          "saltLen" : 28
                         },
                         {
                           "hashAlg" : "SHA-256",
-                          "saltLen" : 2
+                          "saltLen" : 32
                         },
                         {
                           "hashAlg" : "SHA-512",
-                          "saltLen" : 3
+                          "saltLen" : 64
                         }
                       ]
                     }
@@ -2344,15 +2344,15 @@
                       "hashPair" : [
                         {
                           "hashAlg" : "SHA-224",
-                          "saltLen" : 4
+                          "saltLen" : 28
                         },
                         {
                           "hashAlg" : "SHA-256",
-                          "saltLen" : 5
+                          "saltLen" : 32
                         },
                         {
                           "hashAlg" : "SHA-512",
-                          "saltLen" : 6
+                          "saltLen" : 64
                         }
                       ]
                     }
@@ -2360,15 +2360,15 @@
                       "hashPair" : [
                         {
                           "hashAlg" : "SHA-224",
-                          "saltLen" : 7
+                          "saltLen" : 28
                         },
                         {
                           "hashAlg" : "SHA-256",
-                          "saltLen" : 8
+                          "saltLen" : 32
                         },
                         {
                           "hashAlg" : "SHA-512",
-                          "saltLen" : 9
+                          "saltLen" : 64
                         }
                       ]
                     }
