Correcting otherInfo -> oi for consistency with JSON example

--- a/artifacts/acvp_sub_kas_ffc.html
+++ b/artifacts/acvp_sub_kas_ffc.html
@@ -1741,7 +1741,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">otherInfo</td>
+<td class="left">oi</td>
 <td class="left">OtherInfo field</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
