Changing testType from Permutation to AFT

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -1657,7 +1657,7 @@
                   "testGroups": [
                     {
                       "direction": "encrypt",
-                      "testType": "Permutation",
+                      "testType": "AFT",
                       "keyingOption": 1,
                       "tests": [
                         {
