Update to test group section to account for ECC specific properties

--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -1663,32 +1663,8 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">p</td>
-<td class="left">Domain parameter for DSA</td>
-<td class="left">value</td>
-<td class="left">No</td>
-</tr>
-<tr>
-<td class="left"></td>
-<td class="left"></td>
-<td class="left"></td>
-<td class="left"></td>
-</tr>
-<tr>
-<td class="left">q</td>
-<td class="left">Domain parameter for DSA</td>
-<td class="left">value</td>
-<td class="left">No</td>
-</tr>
-<tr>
-<td class="left"></td>
-<td class="left"></td>
-<td class="left"></td>
-<td class="left"></td>
-</tr>
-<tr>
-<td class="left">g</td>
-<td class="left">Domain parameter for DSA</td>
+<td class="left">curveName</td>
+<td class="left">The curve useds for keypair generation</td>
 <td class="left">value</td>
 <td class="left">No</td>
 </tr>
