Updates to test case section related to ECC (public key becomes an x/y coordinate, rather than a single value)

--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -1711,8 +1711,8 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">staticPublicServer</td>
-<td class="left">The DSA static public key</td>
+<td class="left">staticPublicServerX</td>
+<td class="left">The DSA static public key X point</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1723,8 +1723,32 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">ephemeralPublicServer</td>
-<td class="left">The DSA ephemeral public key</td>
+<td class="left">staticPublicServerY</td>
+<td class="left">The DSA static public key Y point</td>
+<td class="left">value</td>
+<td class="left">Yes</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">ephemeralPublicServerX</td>
+<td class="left">The DSA ephemeral public key X point</td>
+<td class="left">value</td>
+<td class="left">Yes</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">ephemeralPublicServerY</td>
+<td class="left">The DSA ephemeral public key Y point</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1783,8 +1807,20 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">staticPublicIut</td>
-<td class="left">The IUT DSA static public key</td>
+<td class="left">staticPublicIutX</td>
+<td class="left">The IUT DSA static public key X point</td>
+<td class="left">value</td>
+<td class="left">Yes</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">staticPublicIutY</td>
+<td class="left">The IUT DSA static public key Y point</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1807,8 +1843,20 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">ephemeralPublicIut</td>
-<td class="left">The IUT DSA ephemeral public key</td>
+<td class="left">ephemeralPublicIutX</td>
+<td class="left">The IUT DSA ephemeral public key X point</td>
+<td class="left">value</td>
+<td class="left">Yes</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">ephemeralPublicIutY</td>
+<td class="left">The IUT DSA ephemeral public key Y point</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
