--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -1712,7 +1712,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicServerX</td>
-<td class="left">The DSA static public key X point</td>
+<td class="left">The DSA static public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1724,7 +1724,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicServerY</td>
-<td class="left">The DSA static public key Y point</td>
+<td class="left">The DSA static public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1736,7 +1736,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicServerX</td>
-<td class="left">The DSA ephemeral public key X point</td>
+<td class="left">The DSA ephemeral public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1748,7 +1748,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicServerY</td>
-<td class="left">The DSA ephemeral public key Y point</td>
+<td class="left">The DSA ephemeral public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1808,7 +1808,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicIutX</td>
-<td class="left">The IUT DSA static public key X point</td>
+<td class="left">The IUT DSA static public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1820,7 +1820,7 @@
 </tr>
 <tr>
 <td class="left">staticPublicIutY</td>
-<td class="left">The IUT DSA static public key Y point</td>
+<td class="left">The IUT DSA static public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1844,7 +1844,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicIutX</td>
-<td class="left">The IUT DSA ephemeral public key X point</td>
+<td class="left">The IUT DSA ephemeral public key X coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
@@ -1856,7 +1856,7 @@
 </tr>
 <tr>
 <td class="left">ephemeralPublicIutY</td>
-<td class="left">The IUT DSA ephemeral public key Y point</td>
+<td class="left">The IUT DSA ephemeral public key Y coordinate</td>
 <td class="left">value</td>
 <td class="left">Yes</td>
 </tr>
