--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -2116,7 +2116,67 @@
 <p id="rfc.section.A.p.1">The following is a example JSON object advertising support for KAS ECC.</p>
 <pre>
 
-
+{
+	"algorithm": "KAS-ECC",
+	"prereqVals": [{
+			"algorithm": "ECDSA",
+			"valValue": "123456"
+		},
+		{
+			"algorithm": "DRBG",
+			"valValue": "123456"
+		},
+		{
+			"algorithm": "SHA",
+			"valValue": "123456"
+		},
+		{
+			"algorithm": "CCM",
+			"valValue": "123456"
+		},
+		{
+			"algorithm": "CMAC",
+			"valValue": "123456"
+		},
+		{
+			"algorithm": "HMAC",
+			"valValue": "123456"
+		}
+	],
+	"functions": ["keyPairGen", "dpGen"],
+	"scheme": {
+		"ephemeralUnified": {
+			"role": ["initiator", "responder"],
+			"noKdfNoKc": {
+				"parameterSet": {
+					"eb": {
+						"curveName": "P-224",
+						"hashAlg": ["SHA2-224", "SHA2-256"]
+					}
+				}
+			},
+			"kdfNoKc": {
+				"kdfOption": {
+					"concatenation": "uPartyInfo||vPartyInfo",
+					"ASN1": "uPartyInfo||vPartyInfo"
+				},
+				"parameterSet": {
+					"ec": {
+						"curveName": "K-283",
+						"hashAlg": ["SHA2-224", "SHA2-256"],
+						"macOption": {
+							"AES-CCM": {
+								"keyLen": [128],
+								"nonceLen": 56,
+								"macLen": 64
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
 
             </pre>
 <h1 id="rfc.appendix.B">
