--- a/artifacts/acvp_sub_mac.html
+++ b/artifacts/acvp_sub_mac.html
@@ -625,7 +625,7 @@
 <td class="left">The keyLen Domain supported by the IUT in bits. (HMAC only)</td>
 <td class="left">Domain</td>
 <td class="left">8-524288</td>
-<td class="left">Yes (required HMAC)</td>
+<td class="left">Yes (required for HMAC)</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -639,7 +639,7 @@
 <td class="left">The array of keyLens supported by the IUT in bits. (CMAC-AES only)</td>
 <td class="left">array</td>
 <td class="left">128, 192, 256</td>
-<td class="left">Yes (required CMAC-AES)</td>
+<td class="left">Yes (required for CMAC-AES)</td>
 </tr>
 <tr>
 <td class="left"></td>
