Update MAC artifacts #224

--- a/artifacts/acvp_sub_mac.html
+++ b/artifacts/acvp_sub_mac.html
@@ -961,7 +961,7 @@
 <td class="left">keyLen</td>
 <td class="left">Length of key in bits to use</td>
 <td class="left">value</td>
-<td class="left">No</td>
+<td class="left">Yes</td>
 </tr>
 <tr>
 <td class="left"></td>
@@ -1223,6 +1223,7 @@
                 "prereqVals" : [{"algorithm" : "AES", "valValue" : "123456"},
 		                {"algorithm" : "TDES", "valValue" : "123456"}],
                 "direction" : [ "gen", "ver" ],
+                "keyingOption" : [ 1, 2 ],
                 "macLen" : [ 8, 64 ],
                 "msgLen" : [ 0, 256, 120, 248, 320 ]
             }
