Artifacts for review changes

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -406,8 +406,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Foley, J., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsym-0.3" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-2-27" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsym-0.4" />
+  <meta name="dct.issued" scheme="ISO8601" content="2018-2-28" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using symmetric algorithms with the ACVP specification." />
 
@@ -428,10 +428,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Informational</td>
-<td class="right">February 27, 2018</td>
+<td class="right">February 28, 2018</td>
 </tr>
 <tr>
-<td class="left">Expires: August 31, 2018</td>
+<td class="left">Expires: September 1, 2018</td>
 <td class="right"></td>
 </tr>
 
@@ -440,7 +440,7 @@
   </table>
 
   <p class="title">ACVP Symmetric Algorithm JSON Specification<br />
-  <span class="filename">draft-ietf-acvp-subsym-0.3</span></p>
+  <span class="filename">draft-ietf-acvp-subsym-0.4</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document defines the JSON schema for using symmetric algorithms with the ACVP specification.</p>
@@ -448,7 +448,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 31, 2018.</p>
+<p>This Internet-Draft will expire on September 1, 2018.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -626,7 +626,7 @@
 </tr>
 <tr>
 <td class="left">direction</td>
-<td class="left">The crypto operation direction</td>
+<td class="left">The IUT processing direction</td>
 <td class="left">array</td>
 <td class="left">encrypt, decrypt</td>
 <td class="left">No</td>
@@ -976,7 +976,7 @@
 <tbody>
 <tr>
 <td class="left">direction</td>
-<td class="left">The encryption direction: encrypt or decrypt</td>
+<td class="left">The IUT processing direction: encrypt or decrypt</td>
 <td class="left">value</td>
 <td class="left">No</td>
 </tr>
@@ -1426,7 +1426,7 @@
 <p id="rfc.section.B.p.1">The following is a example JSON object for AES-GCM test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
               [
-                { "acvVersion": "0.3" },
+                { "acvVersion": "0.4" },
                 { "vsId": 1564,
                   "algorithm": "AES-GCM",
                   "testGroups": [
@@ -1551,7 +1551,7 @@
 <p id="rfc.section.B.p.2">The following is a example JSON object for AES-GCM test results sent from the crypto module to the ACVP server.</p>
 <pre>
                 [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1564,
                     "testResults": [
                         {
@@ -1637,7 +1637,7 @@
 <p id="rfc.section.C.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an AES-CBC Monte Carlo test.</p>
 <pre>
               [
-                { "acvVersion": "0.3" },
+                { "acvVersion": "0.4" },
                 { "vsId": 1564,
                   "algorithm": "AES-CBC",
                   "testGroups": [
@@ -1661,7 +1661,7 @@
 <p id="rfc.section.C.p.2">The following is a example JSON object for test results sent from the crypto module to the ACVP server for an AES-CBC Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
 <pre>
               [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1564,
                     "testResults": [
                         {
@@ -1691,7 +1691,7 @@
 <p id="rfc.section.D.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an TDES-ECB algorithm functional test.</p>
 <pre>
               [
-                { "acvVersion": "0.3" },
+                { "acvVersion": "0.4" },
                 { "vsId": 1564,
                   "algorithm": "TDES-ECB",
                   "testGroups": [
@@ -1721,7 +1721,7 @@
 <p id="rfc.section.D.p.2">The following is a example JSON object for test results sent from the crypto module to the ACVP server for an TDES-ECB algorithm functional test.</p>
 <pre>
               [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1564,
                     "testResults": [
                             {
@@ -1741,7 +1741,7 @@
 <p id="rfc.section.D.p.3">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for the TDES-CFB1 algorithm functional test.</p>
 <pre>
               [
-                { "acvVersion": "0.3" },
+                { "acvVersion": "0.4" },
                 { "vsId": 1564,
                   "algorithm": "TDES-CFB1",
                   "testGroups": [
@@ -1784,7 +1784,7 @@
 <p id="rfc.section.D.p.4">The following is a example JSON object for test results sent from the crypto module to the ACVP server for an TDES-CFB1 algorithm functional test.</p>
 <pre>
               [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1564,
                     "testResults": [
                       {
@@ -1827,7 +1827,7 @@
 <p id="rfc.section.E.p.1">The following is a example JSON object for test vectors sent from the ACVP server to the crypto module for an TDES-ECB Monte Carlo test.</p>
 <pre>
               [
-                { "acvVersion": "0.3" },
+                { "acvVersion": "0.4" },
                 { "vsId": 1564,
                   "algorithm": "TDES-ECB",
                   "testGroups": [
@@ -1851,7 +1851,7 @@
 <p id="rfc.section.E.p.2">The following is a example JSON object for test results sent from the crypto module to the ACVP server for an TDES-ECB Monte Carlo test, only 2 iterations shown for brevity. For MCT results of each iteration are fed into the next iteration.  Therefore the results carry all fields to assist in any failure diagnosis.</p>
 <pre>
               [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1564,
                     "testResults": [
                         {
@@ -1883,7 +1883,7 @@
 <p id="rfc.section.F.p.1">An example of the test results format from an AES-GCM decrypt operation including failure case.</p>
 <pre>
               [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1566,
                     "testResults": [
                         {
@@ -1904,7 +1904,7 @@
 <p id="rfc.section.G.p.1">An example of the test format sent from the server to the client for an AES-CTR encrypt operation.</p>
 <pre>
               [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1566,
                     "algorithm": "AES-CTR",
                     "testGroups": [
@@ -1930,7 +1930,7 @@
 <p id="rfc.section.H.p.1">An example of the test results format from an AES-CTR encrypt operation.</p>
 <pre>
               [
-                  { "acvVersion": "0.3" },
+                  { "acvVersion": "0.4" },
                   { "vsId": 1566,
                     "testResults": [
                         {
