--- a/artifacts/acvp_sub_mac.html
+++ b/artifacts/acvp_sub_mac.html
@@ -401,7 +401,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-submac-0.4" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-6" />
+  <meta name="dct.issued" scheme="ISO8601" content="2018-3-5" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using HMAC and CMAC algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using HMAC and CMAC algorithms with the ACVP specification." />
 
@@ -422,10 +422,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Informational</td>
-<td class="right">June 2016</td>
+<td class="right">March 5, 2018</td>
 </tr>
 <tr>
-<td class="left">Expires: December 3, 2016</td>
+<td class="left">Expires: September 6, 2018</td>
 <td class="right"></td>
 </tr>
 
@@ -442,9 +442,9 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on December 3, 2016.</p>
+<p>This Internet-Draft will expire on September 6, 2018.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
-<p>Copyright (c) 2016 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
+<p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
 
   
@@ -664,7 +664,7 @@
 </tr>
 <tr>
 <td class="left">msgLen</td>
-<td class="left">The CMAC message lengths supported.  Min/max/increment and values must be mod 8.</td>
+<td class="left">The CMAC message lengths supported in bits.  Min/max/increment and values must be mod 8.</td>
 <td class="left">Domain</td>
 <td class="left">0-524288</td>
 <td class="left">Yes</td>
