Adds dataLen table entry for CTR modes

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -867,6 +867,27 @@
 <td class="left">N/A</td>
 <td class="left">N/A</td>
 </tr>
+<tr>
+<td class="left">AES-CTR</td>
+<td class="left">Range of values {Min: 1, Max: 128} minimum greater than or equal to one and maximum less than or equal to 128. The value 128 must appear in this range.</td>
+<td class="left">N/A</td>
+<td class="left">N/A</td>
+<td class="left">N/A</td>
+</tr>
+<tr>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CTR</td>
+<td class="left">Range of values {Min: 1, Max: 64} minimum greater than or equal to one and maximum less than or equal to 64. The value 64 must appear in this range.</td>
+<td class="left">N/A</td>
+<td class="left">N/A</td>
+<td class="left">N/A</td>
+</tr>
 </tbody>
 </table>
 <h1 id="rfc.section.2.4">
