Updates for clarity

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -869,7 +869,7 @@
 </tr>
 <tr>
 <td class="left">AES-CTR</td>
-<td class="left">Range of values {Min: 1, Max: 128} minimum greater than or equal to one and maximum less than or equal to 128. The value 128 must appear in this range.</td>
+<td class="left">Range of valid data lengths from one to the block size of 128. Explicitly {Min: 1, Max: 128} with any supported increment. For example if only the byte boundaries are supported for the stream cipher, this would appear as {Min: 8, Max: 128, Increment: 8}. The value 128 must appear in this range.</td>
 <td class="left">N/A</td>
 <td class="left">N/A</td>
 <td class="left">N/A</td>
@@ -883,7 +883,7 @@
 </tr>
 <tr>
 <td class="left">TDES-CTR</td>
-<td class="left">Range of values {Min: 1, Max: 64} minimum greater than or equal to one and maximum less than or equal to 64. The value 64 must appear in this range.</td>
+<td class="left">Range of valid data lengths from one to the block size of 64. Explicitly {Min: 1, Max: 64} with any supported increment. For example if only the byte boundaries are supported for the stream cipher, this would appear as {Min: 8, Max: 64, Increment: 8}. The value 64 must appear in this range.</td>
 <td class="left">N/A</td>
 <td class="left">N/A</td>
 <td class="left">N/A</td>
