--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -1679,17 +1679,17 @@
     ],
     "algSpecs": [
     {
-      "PQGen": [
+      "pqGen": [
         "probable",
         "provable"
       ],
-      "GGen": [
+      "gGen": [
         "unverifiable",
         "canonical"
       ],
-      "L": 2048,
-      "N": 224,
-      "HashAlg": [
+      "l": 2048,
+      "n": 224,
+      "hashAlg": [
         "sha2-224",
         "sha2-256",
         "sha2-384",
@@ -1699,17 +1699,17 @@
       ]
     },
     {
-      "PQGen": [
+      "pqGen": [
         "probable",
         "provable"
       ],
-      "GGen": [
+      "gGen": [
         "unverifiable",
         "canonical"
       ],
-      "L": 2048,
-      "N": 256,
-      "HashAlg": [
+      "l": 2048,
+      "n": 256,
+      "hashAlg": [
         "sha2-256",
         "sha2-384",
         "sha2-512",
@@ -1717,17 +1717,17 @@
       ]
     },
     {
-      "PQGen": [
+      "pqGen": [
         "probable",
         "provable"
       ],
-      "GGen": [
+      "gGen": [
         "unverifiable",
         "canonical"
       ],
-      "L": 3072,
-      "N": 256,
-      "HashAlg": [
+      "l": 3072,
+      "n": 256,
+      "hashAlg": [
         "sha2-256",
         "sha2-384",
         "sha2-512",
@@ -1759,17 +1759,17 @@
     ],
     "algSpecs": [
     {
-      "PQGen": [
+      "pqGen": [
         "probable",
         "provable"
       ],
-      "GGen": [
+      "gGen": [
         "unverifiable",
         "canonical"
       ],
-      "L": 1024,
-      "N": 160,
-      "HashAlg": [
+      "l": 1024,
+      "n": 160,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
@@ -1780,17 +1780,17 @@
       ]
     },
     {
-      "PQGen": [
+      "pqGen": [
         "probable",
         "provable"
       ],
-      "GGen": [
+      "gGen": [
         "unverifiable",
         "canonical"
       ],
-      "L": 2048,
-      "N": 224,
-      "HashAlg": [
+      "l": 2048,
+      "n": 224,
+      "hashAlg": [
         "sha2-224",
         "sha2-256",
         "sha2-384",
@@ -1800,17 +1800,17 @@
       ]
     },
     {
-      "PQGen": [
+      "pqGen": [
         "probable",
         "provable"
       ],
-      "GGen": [
+      "gGen": [
         "unverifiable",
         "canonical"
       ],
-      "L": 2048,
-      "N": 256,
-      "HashAlg": [
+      "l": 2048,
+      "n": 256,
+      "hashAlg": [
         "sha2-256",
         "sha2-384",
         "sha2-512",
@@ -1818,17 +1818,17 @@
       ]
     },
     {
-      "PQGen": [
+      "pqGen": [
         "probable",
         "provable"
       ],
-      "GGen": [
+      "gGen": [
         "unverifiable",
         "canonical"
       ],
-      "L": 3072,
-      "N": 256,
-      "HashAlg": [
+      "l": 3072,
+      "n": 256,
+      "hashAlg": [
         "sha2-256",
         "sha2-384",
         "sha2-512",
@@ -1860,16 +1860,16 @@
     ],
     "algSpecs": [
     {
-      "N": 224,
-      "L": 2048
+      "n": 224,
+      "l": 2048
     },
     {
-      "N": 256,
-      "L": 2048
+      "n": 256,
+      "l": 2048
     },
     {
-      "N": 256,
-      "L": 3072
+      "n": 256,
+      "l": 3072
     }
   ]
 }
@@ -1886,9 +1886,9 @@
     "mode": "sigGen",
     "prereqVals": [
     {
-      "N": 224,
-      "L": 2048,
-      "HashAlg": [
+      "n": 224,
+      "l": 2048,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
@@ -1899,9 +1899,9 @@
       ]
     },
     {
-      "N": 256,
-      "L": 2048,
-      "HashAlg": [
+      "n": 256,
+      "l": 2048,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
@@ -1912,9 +1912,9 @@
       ]
     },
     {
-      "N": 256,
-      "L": 3072,
-      "HashAlg": [
+      "n": 256,
+      "l": 3072,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
@@ -1939,9 +1939,9 @@
     "mode": "sigVer",
     "prereqVals": [
     {
-      "N": 160,
-      "L": 1024,
-      "HashAlg": [
+      "n": 160,
+      "l": 1024,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
@@ -1952,9 +1952,9 @@
       ]
     },
     {
-      "N": 224,
-      "L": 2048,
-      "HashAlg": [
+      "n": 224,
+      "l": 2048,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
@@ -1965,9 +1965,9 @@
       ]
     },
     {
-      "N": 256,
-      "L": 2048,
-      "HashAlg": [
+      "n": 256,
+      "l": 2048,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
@@ -1978,9 +1978,9 @@
       ]
     },
     {
-      "N": 256,
-      "L": 3072,
-      "HashAlg": [
+      "n": 256,
+      "l": 3072,
+      "hashAlg": [
         "sha-1",
         "sha2-224",
         "sha2-256",
