Artifact regeneration for case changes

--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -1690,12 +1690,12 @@
       "l": 2048,
       "n": 224,
       "hashAlg": [
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
@@ -1710,10 +1710,10 @@
       "l": 2048,
       "n": 256,
       "hashAlg": [
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/256"
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/256"
       ]
     },
     {
@@ -1728,10 +1728,10 @@
       "l": 3072,
       "n": 256,
       "hashAlg": [
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/256"
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/256"
       ]
     }
   ]
@@ -1770,13 +1770,13 @@
       "l": 1024,
       "n": 160,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
@@ -1791,12 +1791,12 @@
       "l": 2048,
       "n": 224,
       "hashAlg": [
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
@@ -1811,10 +1811,10 @@
       "l": 2048,
       "n": 256,
       "hashAlg": [
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/256"
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/256"
       ]
     },
     {
@@ -1829,10 +1829,10 @@
       "l": 3072,
       "n": 256,
       "hashAlg": [
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/256"
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/256"
       ]
     }
   ]
@@ -1889,39 +1889,39 @@
       "n": 224,
       "l": 2048,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
       "n": 256,
       "l": 2048,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
       "n": 256,
       "l": 3072,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     }
   ]
@@ -1942,52 +1942,52 @@
       "n": 160,
       "l": 1024,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
       "n": 224,
       "l": 2048,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
       "n": 256,
       "l": 2048,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     },
     {
       "n": 256,
       "l": 3072,
       "hashAlg": [
-        "sha-1",
-        "sha2-224",
-        "sha2-256",
-        "sha2-384",
-        "sha2-512",
-        "sha2-512/224",
-        "sha2-512/256"
+        "SHA-1",
+        "SHA2-224",
+        "SHA2-256",
+        "SHA2-384",
+        "SHA2-512",
+        "SHA2-512/224",
+        "SHA2-512/256"
       ]
     }
   ]
@@ -2050,7 +2050,7 @@
             {
                 "l": 2048,
                 "n": 224,
-                "hashAlg": "sha2-224",
+                "hashAlg": "SHA2-224",
                 "testType": "GDT",
                 "gMode": "canonical",
                 "tests": [
@@ -2174,7 +2174,7 @@
           {
             "l": 1024,
             "n": 160,
-            "hashAlg": "sha-1",
+            "hashAlg": "SHA-1",
             "testType": "GDT",
             "gMode": "canonical",
             "tests": [
