--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -2517,7 +2517,7 @@
 				"kasRole": "initiator",
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
-				"hashAlg": "sha2-224",
+				"hashAlg": "SHA2-224",
 				"curveName": "p-224",
 				"tests": [{
 					"tcId": 1,
@@ -2530,7 +2530,7 @@
 				"kasRole": "responder",
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
-				"hashAlg": "sha2-224",
+				"hashAlg": "SHA2-224",
 				"curveName": "p-224",
 				"tests": [{
 					"tcId": 21,
@@ -2544,7 +2544,7 @@
 				"kasRole": "initiator",
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
-				"hashAlg": "sha2-224",
+				"hashAlg": "SHA2-224",
 				"curveName": "p-224",
 				"tests": [{
 					"tcId": 41,
@@ -2562,7 +2562,7 @@
 				"kasRole": "responder",
 				"kasMode": "noKdfNoKc",
 				"parmSet": "eb",
-				"hashAlg": "sha2-224",
+				"hashAlg": "SHA2-224",
 				"curveName": "p-224",
 				"tests": [{
 					"tcId": 91,
@@ -2580,8 +2580,8 @@
 				"kasRole": "initiator",
 				"kasMode": "kdfNoKc",
 				"parmSet": "ec",
-				"hashAlg": "sha2-256",
-				"macType": "aes-ccm",
+				"hashAlg": "SHA2-256",
+				"macType": "AES-CCM",
 				"keyLen": 128,
 				"aesCcmNonceLen": 64,
 				"macLen": 128,
@@ -2603,8 +2603,8 @@
 				"kasRole": "responder",
 				"kasMode": "kdfNoKc",
 				"parmSet": "eb",
-				"hashAlg": "sha2-224",
-				"macType": "hmac-sha2-224",
+				"hashAlg": "SHA2-224",
+				"macType": "HMAC-SHA2-224",
 				"keyLen": 128,
 				"macLen": 128,
 				"kdfType": "asn1",
@@ -2624,8 +2624,8 @@
 				"kasRole": "initiator",
 				"kasMode": "kdfNoKc",
 				"parmSet": "eb",
-				"hashAlg": "sha2-224",
-				"macType": "hmac-sha2-224",
+				"hashAlg": "SHA2-224",
+				"macType": "HMAC-SHA2-224",
 				"keyLen": 128,
 				"macLen": 128,
 				"kdfType": "asn1",
@@ -2652,8 +2652,8 @@
 				"kasRole": "responder",
 				"kasMode": "kdfNoKc",
 				"parmSet": "eb",
-				"hashAlg": "sha2-224",
-				"macType": "aes-ccm",
+				"hashAlg": "SHA2-224",
+				"macType": "AES-CCM",
 				"keyLen": 128,
 				"aesCcmNonceLen": 64,
 				"macLen": 128,
