correct misnamed property "algorithm" -> "mode"

--- a/artifacts/acvp_sub_kas_ecc.html
+++ b/artifacts/acvp_sub_kas_ecc.html
@@ -673,7 +673,7 @@
 <td class="left"></td>
 </tr>
 <tr>
-<td class="left">algorithm</td>
+<td class="left">mode</td>
 <td class="left">The algorithm mode.</td>
 <td class="left">value</td>
 <td class="left">Component</td>
